[gd_scene load_steps=6 format=2]

[ext_resource path="res://environment/auto_door_wide.png" type="Texture" id=1]
[ext_resource path="res://environment/auto_door.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 7.5 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -12, -8, -12, 7, 12, 7, 12, -8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 16 )

[node name="auto_door_wide" type="Node2D"]
script = ExtResource( 2 )

[node name="door_obj" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="static_body" type="StaticBody2D" parent="door_obj"]

[node name="door_col" type="CollisionShape2D" parent="door_obj/static_body"]
shape = SubResource( 2 )

[node name="light_occ" type="LightOccluder2D" parent="door_obj"]
position = Vector2( 0, 0.5 )
occluder = SubResource( 3 )

[node name="door_trigger" type="Area2D" parent="."]

[node name="trigger_col" type="CollisionShape2D" parent="door_trigger"]
shape = SubResource( 4 )

[connection signal="body_entered" from="door_trigger" to="." method="_on_door_trigger_1_body_entered"]
[connection signal="body_exited" from="door_trigger" to="." method="_on_door_trigger_1_body_exited"]
